--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: './dottrack_-题号日历/package-lock.json'
+          cache-dependency-path: '**/package-lock.json'
 
       - name: Install Dependencies
         run: |
